  48. New skills: Racial Enemy, Combat Frenzy, Quills, Poisonous Bite
  49. New races: Orangutan, Millipede, Cricket, Porcupine, Beaver, Corn Snake
  50. New channel flags: REALNAMEOOC, and REALNAMEOOCNOADMIN
  51. ShapeShift.txt races have changed, and most got new racial abilities
  52. Prop_ItemSlot now supports LEVEL argument to affect the level of the item.
# Build 5.9.6 Release 12/31/2017
   *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
   1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
   2. Entering SHUTDOWN RESTART HARD will now attempt to run a restart.sh/restart.bat.
   3. GMODIFY now supports changing the CLASS of objects, including rooms.
   4. RESET RELEVEL tool added to refactor an areas level range.
   5. New skills: Studying, Labeling, Organizing, Dissertating, Shush, Titling
   6. Areas can now be unloaded.  And then loaded back again.  See UNLOAD and LOAD.
   7. New FORMULA_s in the coffeemud.ini for total and individual combat experience.
   8. Movement = weight/3 now required to push/pull, and the moves are consumed.
   9. Rooms with certain tree-fruit resources can now be chopped OR gathered.
  10. "STINK" is now a way to access Hygeine in prompt, stat, and scripting.
  11. New shopkeeper type: instrument seller
  12. Mineable dirt and drillable water added to several room types as resources.
  13. New spells: Portal Other, Minor Image, Lesser Image, Greater Image, Superior Image
  14. ShopKeepers now have an Item Buy mask to narrow further what they will buy.
  15. New MOB type: StdLibrarian, also GenLibrarian.  For borrowing items.
  16. New Disease: Planar Instability 
  17. Account menu now supports ANSI command.
  18. Players can now use KILL/ATTACK, with a weapon, to a fight a MOBEater stomach, but will lose.
  19. New input parser: RAW-INPUT-PROCESSOR, to capture char creation and prompt filtering