@@ -278,6 +278,32 @@ public class DefaultPlayerAccount implements PlayerAccount
 	}
 
 	@Override
+	public boolean isIgnored(MOB mob)
+	{
+		if(mob==null)
+			return false;
+		if (mob.soulMate() != null)
+			mob=mob.soulMate();
+		if(ignored.contains(mob.Name()))
+			return true;
+		final PlayerStats stats=mob.playerStats();
+		if(stats ==null)
+			return false;
+		final PlayerAccount account=stats.getAccount();
+		if(account == null)
+			return false;
+		return ignored.contains(account.getAccountName()+"*");
+	}
+
+	@Override
+	public boolean isIgnored(String name)
+	{
+		if(name==null)
+			return false;
+		return (ignored.contains(name) || ignored.contains(name+"*"));
+	}
+
+	@Override
 	public void bumpPrideStat(PrideStat stat, int amt)
 	{
 		final long now=System.currentTimeMillis();
