@@ -229,7 +229,7 @@ public class CMChannels extends StdLibrary implements ChannelsLibrary
 				return false;
 		}
 
-		if((!pstats.getIgnored().contains(sender.Name()))
+		if((!pstats.isIgnored(sender))
 		&&(CMLib.masking().maskCheck(chan.mask(),M,true))
 		&&((!areaReq)
 		   ||(sender.location()==null)
@@ -276,7 +276,8 @@ public class CMChannels extends StdLibrary implements ChannelsLibrary
 		final Room R=M.location();
 		if((!ses.isStopped())
 		&&(R!=null)
-		&&(!pstats.getIgnored().contains(senderName))
+		&&(!pstats.isIgnored(sender))
+		&&(!pstats.isIgnored(senderName))
 		&&(CMLib.masking().maskCheck(chan.mask(),M,true))
 		&&((!areaReq)
 		   ||(sender.location()==null)
