@@ -52,6 +52,7 @@
   50. New channel flags: REALNAMEOOC, and REALNAMEOOCNOADMIN
   51. ShapeShift.txt races have changed, and most got new racial abilities
   52. Prop_ItemSlot now supports LEVEL argument to affect the level of the item.
+  53. Can now ignore an account, which seems obvious when I think about it.
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
